# truthguard

./: Dockerfile  Promblem Staement  README.md  app.py  inference.py  openenv.yaml  pyproject.toml
backend/: main.py  requirements.txt  run_baselines.py
backend/agents/: agents.py
backend/env/: env.py  image_extractor.py
backend/grader/: grader.py
backend/tasks/: generator.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: ActionLog.js  BackgroundFX.js  BeliefPanel.js  ControlBar.js  Header.js  ImageUpload.js  ProductPanel.js  VerdictPanel.js
server/: app.py
