[project]
name = "truthguard-env"
version = "1.0.0"
description = "TruthGuard Environment for OpenEnv evaluation"
authors = [{name = "Mrunal"}]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "python-multipart==0.0.9"
]

[tool.setuptools]
packages = ["backend"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
