[project]
name = "truthguard-env"
version = "1.0.0"
description = "TruthGuard Environment"
authors = [{ name = "Mrunal" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
